# TwitchCommentViewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  patch_ui.py
assets/overlay/: overlay.html  overlay_control.html  overlay_marquee.html  overlay_physics.html  style.css  style_marquee.css  style_physics.css
assets/overlay/marquee/: index.html
assets/overlay/physics/: control.html  index.html  style.css
assets/overlay/standard/: index.html  style.css
doc/: basic_design.md  detailed_design.md  integration_test_spec.md  requirements.md  unit_test_spec.md
scratch/: new_wip_unification.md
src/: AppController.cpp  AppController.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
src/events/: TwitchEvents.h
src/interfaces/: IBouyomiIntegration.h  ICommentAnalyzer.h  IObsIntegration.h  ITtsIntegration.h  ITwitchActionSender.h  ITwitchEventCollector.h
src/modules/: BouyomiIntegrationImpl.cpp  BouyomiIntegrationImpl.h  ChatterRowWidget.cpp  ChatterRowWidget.h  CommentAnalyzer.cpp  CommentAnalyzer.h  ConfigManager.cpp  ConfigManager.h  DatabaseManager.cpp  DatabaseManager.h  ObsFileIntegrationImpl.cpp  ObsFileIntegrationImpl.h  ObsHttpServer.cpp  ObsHttpServer.h  ObsWebSocketServer.cpp  ObsWebSocketServer.h  TwitchEventCollectorImpl.cpp  TwitchEventCollectorImpl.h  VoiceVoxIntegrationImpl.cpp  VoiceVoxIntegrationImpl.h
tests/: CMakeLists.txt  test_main.cpp
tools/: copy_if_not_exists.cmake
tools/DBViewer/: CMakeLists.txt  ViewerMainWindow.cpp  ViewerMainWindow.h  ViewerMainWindow.ui  main.cpp
